# Ohtuprojekti-kesa2020

./: .coveragerc  .gitignore  .travis.yml  Dockerfile  Dockerfile.arm  Doxyfile  Pipfile  README.md  application.py  check_run.sh  classes.html  classnode__object__detector_1_1ObjectNode.html  classtests_1_1test__object__detector_1_1Detector__inherit__graph.md5  demo_2qr_8py.html  dir_634e799a3947388232110823971192a8.html  docker-compose.yml  docker_runner.sh  functions.html  inherit_graph_0.md5  inherit_graph_1.map  inherit_graph_2.map  namespaceimage__converter.html  namespacemembers_vars.html  namespacenode__input.html  namespaces.js  namespacetests.js  node__camera_8py.js  node__object__detector_8py.html  node__qr__detector_8py.html  pages.html  pyproject.toml  requirements.txt  runner.sh  test.launch  test__object__detector_8py.html  yapf_test.sh
.circleci/: config.yml
application/: __main__.py  app.py
application/camera/: camera.py
application/conf/: configuration.py
application/config/: settings
application/detection/: faces.py  pyzbar.py  (+2 more)
documentation/: Ros_node_APIs.md  doxygen_tips.md  mainpage.md  ros-topics_services
old_src/: configuration.py
rostest/: CMakeLists.txt  Doxyfile  README.md  mainpage.md  package.xml  rosdoc.yaml  test.py
search/: all_6.js  all_9.js  all_a.js  all_d.js  classes_0.js  files_0.js  files_1.js  files_6.js  files_8.js  namespaces_0.js  namespaces_6.js  namespaces_7.js  pages_1.js  variables_3.js
src/: CMakeLists.txt  README.md  configuration.py  doxygen_tips.md  face_detect.py  live_detect.py  main.py  package.xml
(+396 files in other folders)
