[[tool.poetry.source]]
name = "pypi2"
url = "https://pypi.org/simple/"

[tool.poetry]
name = "ohtuprojekti-kesa2020"
version = "0.1.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = "~3.7"
opencv-contrib-python-headless = "4.1.0.25"
tensorflow = "1.14.0"
matplotlib = "3.2.1"
rospkg = "1.2.6"
catkin-pkg = "0.4.20"
pyzbar = "0.1.7"

[tool.poetry.dev-dependencies]
yapf = "0.30.0"
coverage = "5.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
